# haive-tools

./: .gitignore  .readthedocs.yaml  DOCUMENTATION_ENHANCEMENT_REPORT.md  README.md  pyproject.toml  pyrightconfig.json  pyrightconfig.json.disabled  pytest.ini  tatus
.github/workflows/: ci.yml  docs.yml  publish.yml
.trunk/: trunk.yaml
docs/source/: api_reference.rst  changelog.rst  conf.py  conf.py.bak  development_toolkit.rst  index.rst  index.rst.broken_backup  search_and_intelligence.rst  tool_categories.rst
docs/source/_static/: code-purple-theme.css  graphviz-purple-theme.css
docs/source/autoapi/: index.rst
docs/source/autoapi/automatic_test_case_generator/: index.rst
docs/source/autoapi/background_process_manager/: index.rst
docs/source/autoapi/code_smell_detector/: index.rst
docs/source/autoapi/complexity_analyzer/: index.rst
docs/source/autoapi/dependency_analyzer/: index.rst
docs/source/autoapi/function_call_analyzer/: index.rst
docs/source/autoapi/function_logging_transformer/: index.rst
docs/source/autoapi/import_analyzer/: index.rst
docs/source/autoapi/import_consolidator/: index.rst
docs/source/autoapi/logger/: index.rst
docs/source/autoapi/multi_file_rename/: index.rst
docs/source/autoapi/permission/: index.rst
docs/source/autoapi/print_to_logging/: index.rst
docs/source/autoapi/refactor/: index.rst
docs/source/autoapi/remote_execution/: index.rst
docs/source/autoapi/shell/: index.rst
docs/source/autoapi/tools/: index.rst
docs/source/autoapi/type_checking/: index.rst
docs/source/autoapi/type_hints/: index.rst
examples/: GALLERY_HEADER.rst  custom_tools_example.py
scripts/: build-docs-with-logging.sh
src/haive/tools/: README.md  __init__.py  __init__.py.backup.20250731_220047
src/haive/tools/search/: __init__.py
src/haive/tools/toolkits/: __init__.py  alpha_vantage.py  amadues_toolkit.py  azure_ai_services_toolkit.py  base.py  chuck_norris_jokes_toolkit.py  citydsk_toolkit.py  clickup_toolkit.py  dataforseo_toolkit.py  financialdatasets_toolkit.py  fred_toolkit.py  free_to_game_toolkit.py  github_toolkit.py  gitlab_toolkit.py  gmail_toolkit.py  google_calendar.py  gradio_toolkit.py  jira_toolkit.py  lcbo_toolkit.py  mongodb_toolkit.py  nasa_toolkit.py  nla_toolkit.py  office_365.py  openlibrary_toolkit.py  pandas_toolkits.py  poetry_db_toolkit.py  polygon_toolkit.py  powerbi_toolkit.py  request_tools.py  rick_and_morty_toolkit.py  rps_101_toolkit.py  slack_toolkit.py  sql_db_toolkit.py  stack_exchange_toolkit.py  steam_toolkit.py  stripe_toolkit.py  trip_advisor_toolkit.py  twilio_toolkit.py  useless_facts_toolkit.py  vbible_toolkit.py  (+2 more)
src/haive/tools/tools/: README.md  __init__.py  agify_tool.py  apify_tools.py  arxiv.py  asknews_tool.py  bing_search_tool_INC.py  binlist_lookup.py  binlist_lookup.py.bak  brave_search.py  corporate_bs_tool.py  dalle_image_generator_tool.py  dataforseo_tool.py  dev_tools.py  discord_tools.py  domain_search_tool.py  duckduckgo_search.py  eleven_labs.py  fruityvice_tool.py  geek_jokes_tool.py  genderize_tool.py  hinge_tools.py  ionic_tool.py  merriam_webster.py  open_food_tool.py  openaq_tool.py  pokebase_tool.py  pubmed.py  pydantic_model_making.py  reddit_search.py  report_of_the_week_tool.py  scene_explain_tool.py  search_tools.py  search_tools.py.bak  stack_exchange.py  techy_phrase_tool.py  translate_tools.py  wolfram_alpha_tool.py  yfinance_tool.py  youtube_search_tool.py
tests/: __init__.py  conftest.py  test_chucknorris_toolkit.py  test_corporate_bs_tool.py  test_tool_manager.py
tests/enhanced_tool_management/: __init__.py  test_tool_state_with_validation.py  test_validation_routing.py  test_validation_state_standalone.py
tests/toolkits/: test_chucknorris_toolkit.py
tests/unit/: __init__.py  test_chucknorris_toolkit.py
(+279 files in other folders)
