[tool.poetry]
name = "haive-tools"
version = "0.1.0"
description = "haive-tools for Haive framework"
authors = ["pr1m8 <william.astley@algebraicwealth.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "haive", from = "src" }]
[tool.poetry.dependencies]
haive-core = { path = "../haive-core", develop = true }
python = ">=3.12,<3.13"
pydantic = "^2.10.6"
langchain = "^0.3.20"
langchain-core = "^0.3.44"
langgraph = "^0.3.5"
google-search-results = "^2.4.2"
pokebase = "^1.4.1"

[tool.poetry.group.dev.dependencies]
haive-core = { path = "../haive-core", develop = true }
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"


[tool.poetry.group.pokemon.dependencies]
pokebase = "^1.4.1"


[tool.poetry.group.searech.dependencies]
google-search-results = "^2.4.2"

[tool.poetry.group.docs.dependencies]
# Use the shared pydevelop-docs system (contains all 43+ Sphinx extensions)
pydevelop-docs = { path = "../../tools/pydevelop-docs", develop = true }
sphinx = "^8.2.3"
sphinx-autoapi = "^3.6.0"
sphinx-autodoc-typehints = "^3.1.0"
sphinxcontrib-autodoc-pydantic = "^2.2.0"
furo = "^2024.8.6"
myst-parser = "^4.0.1"
sphinx-copybutton = "^0.5.2"
sphinx-togglebutton = "^0.3.2"
sphinx-design = "^0.6.1"
sphinx-tabs = "^3.4.5"
sphinx-inline-tabs = "^2023.4.21"
sphinxcontrib-mermaid = "^1.0.0"
sphinxcontrib-plantuml = "^0.30"
sphinxcontrib-blockdiag = "^3.0.0"
sphinxcontrib-seqdiag = "^3.0.0"
sphinx-codeautolink = "^0.17.0"
sphinx-exec-code = "^0.16"
sphinx-runpython = "^0.4.0"
sphinx-sitemap = "^2.6.0"
sphinx-last-updated-by-git = "^0.3.8"
sphinxext-opengraph = "^0.10.0"
sphinx-reredirects = "^1.0.0"
sphinx-favicon = "^1.0.1"
sphinxemoji = "^0.3.1"
sphinx-tippy = "^0.4.3"
enum-tools = "^0.13.0"
sphinx-toolbox = "^3.8.1"
seed-intersphinx-mapping = "^1.2.2"
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
